<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg_color">
    <LinearLayout
        android:id="@+id/ll_view1" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- 注册用户名 -->
        <RelativeLayout 
            android:layout_marginTop="30.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <EditText 
            android:id="@+id/et_register_username"
            android:layout_width="match_parent"
            android:layout_height="45.0dip"
            android:background="@null"
            android:singleLine="true"
            android:paddingLeft="10.0dip"
            android:paddingRight="50.0dip"
            android:maxLength="@string/max_length_username"
            android:hint="@string/login_username"
            android:textSize="12.0sp" 
            />
        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_below="@id/et_register_username"
                android:background="@color/public_item_pressed" />
        </RelativeLayout>
        
         <!-- 密码 -->
        <RelativeLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <EditText 
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="45.0dip"
            android:background="@null"
            android:singleLine="true"
            android:paddingLeft="10.0dip"
            android:paddingRight="50.0dip"
            android:hint="@string/login_password"
            android:maxLength="@string/max_length_password"
            android:inputType="textPassword"
            android:textSize="12.0sp" 
            />
        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_below="@id/et_register_password"
                android:background="@color/public_item_pressed" />
        </RelativeLayout>
        
        <!-- 确认密码 -->
        <RelativeLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <EditText 
            android:id="@+id/et_register_password2"
            android:layout_width="match_parent"
            android:layout_height="45.0dip"
            android:background="@null"
            android:singleLine="true"
            android:paddingLeft="10.0dip"
            android:paddingRight="50.0dip"
            android:hint="@string/login_password2"
            android:maxLength="@string/max_length_password"
            android:inputType="textPassword"
            android:textSize="12.0sp" 
            />
        </RelativeLayout>
        
    </LinearLayout>

    <!-- 注册按钮 -->

        <RelativeLayout
            android:layout_below="@id/ll_view1"
            android:layout_marginTop="40.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_register"
                android:layout_width="300.0dip"
                android:layout_height="48dip"
                android:layout_centerInParent="true"
                style="@style/RedButton"
                android:text="@string/login_btn_register"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </RelativeLayout>
    

</RelativeLayout>
