<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dialog_corners_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="@dimen/dialog_width"
        android:layout_height="96dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/exit_app" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_divide_line"
        android:background="@color/public_divide_line"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_button_height"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_comfirm"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_leftbtn_bg"
            android:gravity="center"
            android:text="@string/dialog_comfirm" />

        <ImageView
            android:layout_width="@dimen/public_divide_line"
            android:layout_height="fill_parent"
            android:background="@color/public_divide_line"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_rightbtn_bg"
            android:gravity="center"
            android:text="@string/dialog_cancle" />
    </LinearLayout>

</LinearLayout>